# gsc-api

./: pyproject.toml
.github/workflows/: deploy.yml
gsc/: db.sqlite3  manage.py
gsc/gsc/: admin.py  asgi.py  client_secret.json  models.py  settings.py  urls.py  views.py  wsgi.py
gsc/gsc/migrations/: 0001_initial.py
scripts/: deploy.sh
scripts/confs/: gsc-api.service  gsc-api.socket  nginx.conf
